assets/css/header.css
.header{
    /* border: 1px solid aliceblue; */
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1000;
    width: 100%;
}

.header::before{
    content: "";
    position: absolute;
    width: 100%;
    height: 100%;
    background: rgb(0,0,0);
    background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0.5) 70%, rgba(0,0,0,0) 100%);
    top: 0;
    left: 0;
    z-index: -1;
}

.header-content{
    font-size: 1.2em;
    letter-spacing: -1px;
    width: 100%;
    margin: 0 auto;
    padding-top: 30px;
    padding-bottom: 50px;
    padding-inline-start: 70px;
    padding-inline-end: 70px;
    display: flex;
    justify-content: space-between;
}

.header-logo{
    transition: 0.3s ease-in-out;
}

.header-logo:hover{
    background-image: linear-gradient(90deg, rgba(82,84,255,1) 0%, rgba(250,249,246,1) 25%, rgba(226,121,96,1) 50%, rgba(250,249,246,1) 75%, rgba(82,84,255,1) 100%);
    -webkit-background-clip: text;
    background-clip: text;
    color: transparent;
    background-size: 300%;
    animation: text-gradient 2s infinite alternate;
}

.header-logo span{
    font-size: 0.9em;
}

#check{
    z-index: 2000;
    display: none;
}

.header-menu-icon{
    font-size: 2.5em;
    display: none;
    cursor: pointer;
    position: absolute;
    right: 25px;
    z-index: 9999;
}

.header-menu li{
    display: inline-block;
    padding-inline: 15px;
}

.header-menu li a{
    position: relative;
    z-index: 5;
}

.header-menu li a::after{
    content: "";
    position: absolute;
    background-color: #FAF9F6;
    height: 2px;
    width: 0%;
    left: 0;
    bottom: -6px;
    transition: 0.2s;
}

.header-menu li a:hover::after{
    width: 100%;
}

.mobile-only-menu{
    display: none;
}


@media screen and (max-width: 1024px) and (min-height: 1001px){

    .header-content{
        padding-inline-start: 35px;
        padding-inline-end: 35px;
    }

    .header-menu li{
        padding-inline: 12px;
    }
    
}


@media screen and (max-width: 1024px) and (max-height: 1000px){

    .header-content{
        padding-inline-start: 35px;
        padding-inline-end: 35px;
    }

    .header-menu li{
        padding-inline: 12px;
    }
    
}

@media screen and (max-width: 550px){

    .header-content{
        display: flex;
        align-items: center;
        justify-content: center;
    }

    .header-logo{
        font-size: 4.4svw;
        position: absolute;
        top: 22px;
        left: 5svw;
        z-index: 9999;
    }

    #check:checked~.header-menu-icon #hamburger-icon{
        display: none;
    }

    #check:checked~.header-menu-icon #x-icon{
        display: block;
    }

    .header-menu-icon{
        font-size: 2.2em;
        display: inline-flex;
        top: 1.5svh;
        right: 5svw;
    }

    .header-menu-icon #x-icon{
        display: none;
    }

    .header-menu{
        /* border: 2px solid red; */
        position: absolute;
        top: 0;
        padding-top: 20svw;
        left: 0;
        width: 100%;
        height: 0;
        background: rgb(7,7,7);
        font-size: 15svw;
        overflow: hidden;
        display: flex;
        flex-direction: column;
    }

    .header-menu li{
        /* border: 2px solid yellow; */
        display: block;
        padding-left: 5svw;
    }

    .mobile-only-menu{
        /* border: 2px solid red; */
        font-size: 4svw;
        list-style-type: none;
        display: flex;
        position: absolute;
        height: 0;
        margin-top: 100svh;
        overflow: hidden;
    }

    .mobile-only-menu li{
        padding-top: 89lvh;
        margin-inline: 3svw;
    }

    #check:checked~.header-menu{
        height: 100lvh;
    }

    #check:checked~.mobile-only-menu{
        height: 100lvh;
    }
    
}

